<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/mnuFile" android:orderInCategory="100" android:title="@string/file" android:icon="@drawable/ic_action_file_light">
        <menu>
            <item android:id="@+id/mnuNew" android:orderInCategory="100" android:title="@string/newFile" android:icon="@drawable/ic_action_new_light"/>
            <item android:id="@+id/mnuOpen" android:orderInCategory="100" android:title="@string/open" android:icon="@drawable/ic_action_open_light"/>
            <item android:id="@+id/mnuSave" android:orderInCategory="100" android:title="@string/save" android:icon="@drawable/ic_action_save_light"/>
            <item android:id="@+id/mnuSaveAs" android:orderInCategory="100" android:title="@string/save_as" android:icon="@drawable/ic_action_save_as_light"/>
            <item android:id="@+id/mnuDelete" android:orderInCategory="100" android:title="@string/delete" android:icon="@drawable/ic_action_delete_light" android:visible="false"/>
        </menu>
    </item>
    <item android:id="@+id/mnuAssemble" android:orderInCategory="100" android:icon="@drawable/ic_action_assemble_light" android:title="@string/assemble"></item>
    <item android:id="@+id/mnuRestart" android:title="@string/restart" android:orderInCategory="100" android:icon="@drawable/ic_action_restart_light"></item>
    <item android:id="@+id/mnuBackStep" android:orderInCategory="100" android:icon="@drawable/ic_action_backstep_light" android:visible="false" android:title="@string/back_step"></item>
    <item android:id="@+id/mnuStep" android:orderInCategory="100" android:icon="@drawable/ic_action_step_light" android:visible="false" android:title="@string/step"></item>
    <item android:id="@+id/mnuRun" android:orderInCategory="100" android:icon="@drawable/ic_action_run_light" android:visible="false" android:title="@string/run"></item>
    <item android:id="@+id/mnuDatapath" android:title="@string/datapath" android:orderInCategory="100">
        <menu>
            <item android:id="@+id/mnuPerformanceMode" android:checked="false" android:orderInCategory="100" android:checkable="true" android:title="@string/performance_mode"/>
            <item android:id="@+id/mnuControlPath" android:orderInCategory="100" android:title="@string/control_path" android:checkable="true" android:checked="true"/>
            <item android:id="@+id/mnuArrowsInWires" android:orderInCategory="100" android:checkable="true" android:checked="true" android:title="@string/arrows_in_wires"/>
            <item android:id="@+id/mnuOverlayedData" android:orderInCategory="100" android:checkable="true" android:checked="true" android:title="@string/overlayed_data"/>
            <item android:id="@+id/mnuRestoreLatencies" android:title="@string/restore_latencies" android:orderInCategory="100"/>
            <item android:id="@+id/mnuRemoveLatencies" android:title="@string/remove_latencies" android:orderInCategory="100"/>
            <item android:id="@+id/mnuStatistics" android:title="@string/statistics" android:orderInCategory="100"/>
        </menu>
    </item>
    <item android:id="@+id/mnuLoadCPU" android:icon="@drawable/ic_action_load_light" android:orderInCategory="100" android:title="@string/load_cpu"></item>
    <item android:id="@+id/mnuSwitchTheme" android:title="@string/dark_theme" android:checked="false" android:orderInCategory="100" android:checkable="true" android:icon="@drawable/ic_action_theme_light"></item>
    <item android:id="@+id/mnuAbout" android:orderInCategory="100" android:title="@string/about" android:icon="@drawable/ic_action_about_light"></item>

</menu>