<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="0"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clock_period" />

            <TextView
                android:id="@+id/lblClockPeriodVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clock_frequency" />

            <TextView
                android:id="@+id/lblClockFrequencyVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/executed_cycles" />

            <TextView
                android:id="@+id/lblExecutedCyclesVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/execution_time" />

            <TextView
                android:id="@+id/lblExecutionTimeVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/executed_instructions" />

            <TextView
                android:id="@+id/lblExecutedInstructionsVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpi" />

            <TextView
                android:id="@+id/lblCPIVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forwards" />

            <TextView
                android:id="@+id/lblForwardsVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stalls" />

            <TextView
                android:id="@+id/lblStallsVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right" />

        </TableRow>

    </TableLayout>

</ScrollView>
